--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 
 </head>
 <body onload="onLoad()">
-	<div data-role="page" id="homePage" data-theme="a">
+	<div data-role="page" id="homePage" >
 		<div data-role="header">
  
       <span>GPS Example</span>
   
 </div>		
-		</div>
-		<div data-role="content" data-theme="a">
+		
+		<div data-role="content" >
 			
 			<button onclick="positionBekommen();">Position</button><br/>
 			<button onclick="positionFolgen();">Position verfolgen</button>	
 			
 		</div>		
-		<div data-role="footer" data-theme="a">		
+		<div data-role="footer" >		
 		</div>
 	</div>
 	<script>
